change revision